--- a/.github/workflows/publish-maven-central.yml
+++ b/.github/workflows/publish-maven-central.yml
@@ -22,3 +22,17 @@ jobs:
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
           SIGN_KEY: ${{ secrets.SIGN_KEY }}
           SIGN_KEY_PASS: ${{ secrets.SIGN_KEY_PASS }}
+
+      - name: Set up Java for building fat-jar
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Build fat-jar
+        run: mvn --batch-mode package -Pfatjar
+      - name: Upload fat-jar to release as release assets
+        run: |
+          TAG=${GITHUB_REF/refs\/tags\//}
+          gh release upload ${TAG} target/apimock.jar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
